[package]
name = "simd_47_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
client = ["no-entrypoint"]

[dependencies]
solana-program = {path = "/home/galactus/solana/sdk/program"}
serde = "^1.0.118"
bincode = "^1.3.1"

[lib]
name = "simd_47_tests"
crate-type = ["cdylib", "lib"]